[package]
name = "no_vec"
version = "0.3.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
repository = "https://github.com/DenisKolodin/no_vec"
homepage = "https://github.com/DenisKolodin/no_vec"
documentation = "https://docs.rs/no_vec/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["array", "slice", "vec"]
categories = ["data-structures"]
description = "A library for modifying sized arrays"

[dependencies]
